[package]
name = "gfx-hal-compute-example"
version = "0.1.0"
license = "MIT/Apache-2.0"

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.18"
gfx-hal = { version = "0.1", git = "https://github.com/gfx-rs/gfx", branch = "master" }
glsl-to-spirv = "0.1.6"
log = "0.4.0"
env_logger = "0.5.12"
rand = "0.6.3"
shaderc = "0.3"

[dependencies.gfx-backend-vulkan]
version = "0.1"
git = "https://github.com/gfx-rs/gfx"
branch = "master"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.1"
git = "https://github.com/gfx-rs/gfx"
branch = "master"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
git = "https://github.com/gfx-rs/gfx"
branch = "master"
optional = true

[[bin]]
name = "compute-example"
path = "src/compute-example.rs"

